--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ add_executable(mkl mkl_dgemm.cpp)
 target_link_libraries(mkl "-lmkl_intel_ilp64 -lmkl_sequential -lmkl_core")
 
 add_executable(naive-ijk naive_ijk.cpp)
+add_executable(openblas openblas_dgemm.cpp)
+target_link_libraries(openblas "-lopenblas")
