--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
 project(peak CXX)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+add_definitions("-mavx2 -march=native")
+
 add_executable(mkl mkl_dgemm.cpp)
 target_link_libraries(mkl "-lmkl_intel_ilp64 -lmkl_sequential -lmkl_core")
 
