--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
   },
   "cmake.configureArgs": [
     "-DCMAKE_PREFIX_PATH=/home/xilinxing/Downloads/Halide-12.0.1-x86-64-linux/lib/cmake/"
-  ]
+  ],
+  "jupyter.debugJustMyCode": false,
+  "C_Cpp.workspaceSymbols": "All"
 }
