--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "-DCMAKE_PREFIX_PATH=/home/xilinxing/Downloads/Halide-12.0.1-x86-64-linux/lib/cmake/"
   ],
   "jupyter.debugJustMyCode": false,
-  "C_Cpp.workspaceSymbols": "All"
+  "C_Cpp.workspaceSymbols": "All",
+  "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
